# sjupdate

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  test.yml
src/: main.rs  package_manifest.rs  release.rs  rss.rs
tests/fixtures/: package-lock.json  package.json
