[package]
name = "sjupdate"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.0"
clap = { version = "4.5.6", features = ["derive"] }
lenient_semver = "0.4.2"
reqwest = "0.12.4"
rss = "2.0.8"
semver = "1.0.23"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }

[dev-dependencies]
mockito = "1.4.0"
